# sequali

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CITATION.cff  MANIFEST.in  README.rst  fingerprinter.py  pyproject.toml  score_to_error_rate.py  setup.py  tox.ini  twobit_to_nucleotides.py
.github/: release_checklist.md
.github/workflows/: ci.yml
docs/: conf.py  index.rst  module_options.rst  user_guide.rst
docs/_static/images/: fingerprint.fodg  overrepresented_sampling.fodg
docs/reports/: 21C125_R1.fastq.gz.html
scripts/: adapter_match_rates.py  benchmark_create_sequence_index.py  benchmark_sequence_identity.py  check_presence_in_fasta.py  create_random_fastq.py  fastq_create.py  finger_print_quality.py  fingerprinter.py  generate_colors.py  generate_nanopore_barcodes.py  oxford_nanopore_barcodes.tsv  oxford_nanopore_native_barcodes.tsv  run_sequali_paired.py  score_to_error_rate.py
src/fasterqc/: __init__.py  _qc.pyi  _qc.pyx  _qcmodule.c  score_to_error_rate.h
src/sequali/: __init__.py  __main__.py  _qc.pyi  _qcmodule.c  _seqident.pyi  _seqidentmodule.c  _version.py  adapters.py  bam_decode.h  compiler_defs.h  debug_vectors.h  function_dispatch.h  html_report.py  murmur3.h  plots.py  report_modules.py  sequence_identification.py  stats.py  twobit_to_nucleotides.h  util.py  wanghash.h
src/sequali/adapters/: adapter_list.tsv  adapter_list.txt
src/sequali/contaminants/: Illumina.fasta  Illumina_adapter_trimming_sequences.fasta  README  UniVec.fasta  common_human_repeats.fasta  oxford_nanopore.fasta  oxford_nanopore_barcodes.fasta
src/sequali/static/: sequali_report.css  svg_to_download_link.js
src/sequali/style/: sequali_report.css
tests/: test_adapter_counter.py  test_bam_parser.py  test_dedup_estimator.py  test_fastq_parser.py  test_fastq_record_array.py  test_insert_size_metrics.py  test_integration.py  test_nano_stats.py  test_overrepresented_sequences.py  test_per_tile_quality.py  test_qc_metrics.py  test_report_modules.py  test_sequence_duplication.py  test_sequence_identification.py  test_util.py
tests/data/: 100_illumina_adapters.fastq  README.md  dorado_nanopore_100reads.bam  empty_illumina_metadata.fastq  empty_nanopore_metadata.fastq  empty_read.fastq  missing_quals.sam  nanopore_disparate_dates.fastq  secondary_alignment.bam  simple.fastq  simple.raw.bam  simple.unaligned.bam  single_illumina_metadata.fastq  single_nanopore_metadata.fastq  single_nuc.fastq  test.fasta  test_skip.bam  test_skip.sam
