[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name="sequali"
description="Sequali is a QC tool that generates useful graphs for both short and long-read data."
authors = [
    {name = "Ruben Vorderman", email = "r.h.p.vorderman@lumc.nl"}
]
keywords=[
    "FASTQ",
    "sequencing quality",
    "uBAM",
    "QC",
    "nanopore",
    "illumina",
]
readme = "README.rst"
license = "AGPL-3.0-or-later"
classifiers = [
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Development Status :: 5 - Production/Stable",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
        "xopen>=2.0.0",
        "pygal>=3.0.4",
        "tqdm",
]
dynamic = ["version"]

[project.scripts]
sequali = "sequali.__main__:main"
sequali-report = "sequali.__main__:sequali_report"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
sequali = ["*.c", "*.h"]

[tool.setuptools.package-data]
sequali = [
    '*.pyi',
    'py.typed',
    'contaminants/*',
    'adapters/*',
    'static/*',
    'pygal.js/README.md',
    'pygal.js/2.0.x/*'
]
[project.urls]
"Documentation" = "https://sequali.readthedocs.io"
"Homepage" = "https://github.com/rhpvorderman/sequali"
"Issue tracker" = "https://github.com/rhpvorderman/sequali/issues"

[tool.setuptools_scm]
write_to = "src/sequali/_version.py"

[tool.cibuildwheel.linux.environment]
CFLAGS = "-O3 -DNDEBUG"

[tool.cibuildwheel.macos.environment]
CFLAGS = "-O3 -DNDEBUG"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests/"
skip =  "*-win32 *-manylinux_i686 pp3* cp3??t-*"   # Skip 32 bit, pypy
build-verbosity = 1